#=======================================================================================================================
         project(editor LANGUAGES CXX)
#=======================================================================================================================
     add_library(editor)
#=======================================================================================================================
add_subdirectory(code)
#=======================================================================================================================