#=======================================================================================================================
target_include_directories(${PROJECT_NAME} PUBLIC  .)
#=======================================================================================================================
     target_link_libraries(${PROJECT_NAME} PRIVATE commons)
#=======================================================================================================================
add_subdirectory(core)
#=======================================================================================================================